# fix-command

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  INSTANT_MODE.md  RULES.md  SETTINGS.md  SHELL_INTEGRATION.md
src/: app.rs  command.rs  engine.rs  lib.rs  main.rs  settings.rs  tui.rs  util.rs
src/output_reader/: instant.rs  mod.rs  rerun.rs
src/rules/: mod.rs
src/rules/builtin/: cd_correction.rs  mod.rs  no_command.rs  sudo.rs
src/shell/: alias.rs
